fix wiki logo alignment

--- a/src/pages/header/header.css
+++ b/src/pages/header/header.css
@@ -3,14 +3,14 @@
   color: var(--text-color);
   text-transform: capitalize;
   display: flex;
-
+  align-items: center;
   font-size: 1.3rem;
 }
+
 .nav-logo {
-  float: inline-start;
-  display: block;
-  padding: 0.63rem 0 0 0.5rem;
+  padding: 0 0 0 0.5rem;
 }
+
 .nav-li {
   display: flex;
   cursor: pointer;
@@ -29,7 +29,7 @@
   bottom: 0;
   left: 0;
   width: 0;
-  height: 2px;
+  height: 1.5px;
   background-color: #eeeeee;
   transition: width 0.3s ease-out;
 }
@@ -39,7 +39,6 @@
 }
 
 .nav-li :not(:hover):before {
-  /* transition: width 0.3s ease-in; Adjusted timing function to ease-in when not hovering */
   transition: width 3s ease-in, transform 0.3s ease-out;
   transform-origin: right;
   transform: scaleX(0);
@@ -55,8 +54,6 @@
   width: 100%;
   height: 4rem;
 }
-
-/* footer css done here  */
 
 .footer {
   font-family: "Montserrat";
